# VirusTotalAPI

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  justfile  noxfile.py  pyproject.toml  virustotal_api.py
app/errors/: pyproject.toml
app/errors/src/errors/: handler.py
app/errors/tests/: test_errors.py
app/logger/: pyproject.toml
app/logger/src/logger/: config.py
app/logger/tests/: test_logger.py
app/settings/: pyproject.toml
app/settings/src/settings/: config.py
app/settings/tests/: test_config.py
app/virustotal/: pyproject.toml
app/virustotal/src/virustotal/: __init__.py  cli.py  client.py
app/virustotal/tests/: conftest.py  test_cli.py  test_client.py
src/: api_key_provider.py  formatters.py
