[project]
name = "virustotal"
version = "0.1.0"
description = "CLI client for the VirusTotal API v3"
requires-python = ">=3.11"
dependencies = [
    "vt-settings",
    "vt-logger",
    "vt-errors",
    "requests",
]

[project.scripts]
virustotal-api = "virustotal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virustotal"]

[tool.uv.sources]
vt-settings = { workspace = true }
vt-logger = { workspace = true }
vt-errors = { workspace = true }
